Fix map + swiper on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -999,6 +999,7 @@ footer::after {
   }
 }
 .section-location__form {
+  margin-bottom: 24px;
   width: 100%;
   height: 100%;
   max-width: 425px;
@@ -1008,6 +1009,11 @@ footer::after {
   background-image: url(../img/modal-bg.png);
   border-radius: 32px;
   overflow-y: hidden;
+}
+@media screen and (min-width: 1280px) {
+  .section-location__form {
+    margin-bottom: 0;
+  }
 }
 .section-location__form-title {
   text-align: center;
