--- a/scss/layouts/_location-section.scss
+++ b/scss/layouts/_location-section.scss
@@ -49,6 +49,7 @@
   }
 
   &__form {
+    margin-bottom: 24px;
     width: 100%;
     height: 100%;
     max-width: 425px;
@@ -58,6 +59,10 @@
     background-image: url(../img/modal-bg.png);
     border-radius: 32px;
     overflow-y: hidden;
+
+    @media screen and (min-width: $bp-desktop) {
+      margin-bottom: 0;
+    }
   }
 
   &__form-title {
